[package]
name = "multipart-form-data"
version = "0.1.0"
edition = "2021"

[dependencies]
multipart-boundary = { version = "0.1", default-features = false, path = "../multipart-boundary" }

[dev-dependencies]
isahc = { version = "1.6", default-features = false }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
