[package]
name = "multipart-form-data"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Multipart form data"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/multipart-rs"
homepage = "https://github.com/bk-rs/multipart-rs"
documentation = "https://docs.rs/multipart-form-data"
keywords = []
categories = []
readme = "README.md"

[dependencies]
multipart-boundary = { version = "0.1", default-features = false, path = "../multipart-boundary" }

[dev-dependencies]
isahc = { version = "1.6", default-features = false }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
